End of resource-rating section

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -51,3 +51,15 @@
 <%= render 'comments/form' %>
 <%= link_to 'Edit', edit_place_path(@place) %> |
 <%= link_to 'Back', places_path %>
+<p>
+<strong>Votes:</strong><br />
+Autism_friendly : <%= rating_for @place, "autism_friendly" %> <br />
+Overall : <%= rating_for @place, "overall" %>
+</p>
+<hr />
+<p>
+<strong>Your votes:</strong><br />
+Autism_friendly : <%= rating_for_user @place, current_user, "autism_friendly", :star => 7 %>
+Overall : <%= rating_for_user @place, current_user, "autism_friendly", :star => 7 %>
+</p>
+<hr />
